--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -292,12 +292,10 @@
 						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
 					</div>
-					<!--  TODO
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Apostelgeschichte 4:12</a></div>
+						<div class="text">Nur Jesus kann den Menschen Rettung bringen. Nichts und niemand sonst auf der ganzen Welt rettet uns.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte4%2C12" target="_blank">Apostelgeschichte 4:12 (HFA)</a></div>
 					</div>
-					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -315,24 +313,22 @@
 					<div class="label">Taten</div>
 				</div>
 				<div class="moreinfos">
-					<!-- TODO
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="Jakobus 2:26" target="_blank"></a></div>
+						<div class="text">Genauso wie der menschliche Leib ohne den Lebensgeist tot ist, so ist auch der Glaube ohne entsprechende Taten tot.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jakobus2%2C26" target="_blank">Jakobus 2:26 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="Jesaja 1:17" target="_blank"></a></div>
+						<div class="text">Lernt wieder, Gutes zu tun! Sorgt für Recht und Gerechtigkeit, tretet den Gewalttätern entgegen und verhelft den Waisen und Witwen zu ihrem Recht!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja1%2C17" target="_blank">Jesaja 1:17 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="1.Korinther 15:58" target="_blank"></a></div>
+						<div class="text">Bleibt daher fest und unerschütterlich in eurem Glauben, meine lieben Brüder und Schwestern! Setzt euch mit aller Kraft für den Herrn ein, denn ihr wisst: Nichts ist vergeblich, was ihr für ihn tut.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther15%2C58" target="_blank">1.Korinther 15:58 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="Psalmen 82:3" target="_blank"></a></div>
+						<div class="text">Verhelft den Armen und Waisen zu ihrem Recht und verteidigt die Sache der Notleidenden und Unterdrückten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm82%2C3" target="_blank">Psalmen 82:3 (NLB)</a></div>
 					</div>
-					-->
 					<div class="moreinfo">
 						<div class="text">In Christus Jesus sind wir Gottes Meisterstück. Er hat uns geschaffen, dass wir tun, was wirklich gut ist, gute Werke, die er für uns vorbereitet hat, dass wir damit unser Leben gestalten.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Epheser2%2C10" target="_blank">Epheser 2,10 (NeÜ)</a></div>
@@ -548,28 +544,26 @@
 					<div class="label">Gebet</div>
 				</div>
 				<div class="moreinfos">
-					<!-- TODO
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Epheser 6:18</a></div>
+						<div class="text">Hört nie auf zu beten und zu bitten! Lasst euch dabei vom Heiligen Geist leiten. Bleibt wach und bereit. Bittet Gott inständig für alle Christen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser6%2C18" target="_blank">Epheser 6:18 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Jakobus 5:16</a></div>
+						<div class="text">Überhaupt sollt ihr einander eure Verfehlungen bekennen und füreinander beten, damit ihr geheilt werdet. Das inständige Gebet eines Menschen, der so lebt, wie Gott es verlangt, kann viel bewirken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jakobus5%2C16" target="_blank">Jakobus 5:16 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Lukas 11:9</a></div>
+						<div class="text">Darum sage ich euch: Bittet Gott, und er wird euch geben! Sucht, und ihr werdet finden! Klopft an, und euch wird die Tür geöffnet!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas11%2C9" target="_blank">Lukas 11:9 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Markus 11:24</a></div>
+						<div class="text">Deshalb sage ich euch: Um was ihr auch bittet – glaubt fest, dass ihr es schon bekommen habt, und Gott wird es euch geben!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Markus11%2C24" target="_blank">Markus 11:24 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Kolosser 4:2</a></div>
+						<div class="text">Lasst euch durch nichts vom Gebet abbringen und vergesst dabei nicht, Gott zu danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser4%2C2" target="_blank">Kolosser 4:2 (HFA)</a></div>
 					</div>
-					-->
 					<div class="moreinfo">
 						<div class="text">Alles, was ihr im vertrauensvollen Gebet verlangt, werdet ihr bekommen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C22" target="_blank">Matthäus 21,22 (NLB)</a></div>
@@ -586,20 +580,18 @@
 						<div class="text">In dieser Zeit verließ Jesus die Stadt und stieg auf einen Berg, um zu beten. Die ganze Nacht hindurch sprach er im Gebet mit Gott.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas6%2C12" target="_blank">Lukas 6,12 (HFA)</a></div>
 					</div>
-					<!-- TODO
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Johannes 15:7</a></div>
+						<div class="text">Wenn ihr aber fest mit mir verbunden bleibt und euch meine Worte zu Herzen nehmt, dürft ihr von Gott erbitten, was ihr wollt; ihr werdet es erhalten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes15%2C7" target="_blank">Johannes 15:7 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">1.Johannes 5:14-15</a></div>
+						<div class="text">Deshalb dürfen wir uns auch darauf verlassen, dass Gott unser Beten erhört, wenn wir ihn um etwas bitten, was seinem Willen entspricht. Und weil wir wissen, dass Gott all unsere Gebete hört, dürfen wir sicher sein, dass er uns gibt, worum wir ihn bitten. Es ist, als hätten wir es schon erhalten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Johannes5%2C14-15" target="_blank">1.Johannes 5:14-15 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Johannes 16:24</a></div>
+						<div class="text">Bisher habt ihr euch nicht auf mich berufen, wenn ihr etwas von Gott erbeten habt. Bittet ihn, und er wird es euch geben. Dann wird eure Freude vollkommen sein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes16%2C24" target="_blank">Johannes 16:24 (HFA)</a></div>
 					</div>
-					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -649,76 +641,74 @@
 						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
 					</div>
-					<!-- TODO
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">1.Petrus 3:9</a></div>
+						<div class="text">Vergeltet Böses nicht mit Bösem. Werdet nicht zornig, wenn die Leute unfreundlich über euch reden, sondern wünscht ihnen Gutes und segnet sie. Denn genau das verlangt Gott von euch, und er wird euch dafür segnen!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Petrus3%2C9" target="_blank">1.Petrus 3:9 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Römer 12:9-12</a></div>
+						<div class="text">Täuscht nicht nur vor, andere zu lieben, sondern liebt sie wirklich. Hasst alles Böse und stellt euch auf die Seite des Guten. Liebt einander mit aufrichtiger Zuneigung und habt Freude daran, euch gegenseitig Achtung zu erweisen. Werdet nicht nachlässig, sondern lasst euch ganz vom Geist erfüllen und setzt euch für den Herrn ein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/R%C3%B6mer12%2C9-12" target="_blank">Römer 12:9-11 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Römer 12:21</a></div>
+						<div class="text">Lass dich nicht vom Bösen überwinden, sondern überwinde das Böse durch das Gute!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/R%C3%B6mer12%2C21" target="_blank">Römer 12:21 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">1.Korinther 10:31</a></div>
+						<div class="text">(...) Ob ihr esst oder trinkt oder was immer ihr sonst tut – alles soll zur Ehre Gottes geschehen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/ELB.GNB.HFA.LUT.NLB.Ne%C3%9C/1.Korinther10%2C31" target="_blank">1.Korinther 10:31 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Epheser 4:29-32</a></div>
+						<div class="text">Redet nicht schlecht voneinander, sondern habt ein gutes Wort für jeden, der es braucht. Was ihr sagt, soll hilfreich und ermutigend sein, eine Wohltat für alle. Tut nichts, was den Heiligen Geist traurig macht. Als Gott ihn euch schenkte, hat er euch sein Siegel aufgedrückt. Er ist doch euer Bürge dafür, dass der Tag der Erlösung kommt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C29-30" target="_blank">Epheser 4:29-30 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Epheser 5:4-7</a></div>
+						<div class="text">Befreit euch von Bitterkeit und Wut, von Ärger, harten Worten und übler Nachrede sowie jeder Art von Bosheit. Seid stattdessen freundlich und mitfühlend zueinander und vergebt euch gegenseitig, wie auch Gott euch durch Christus vergeben hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser4%2C31-32" target="_blank">Epheser 4:31-32 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Jakobus 5:9</a></div>
+						<div class="text">Genauso unpassend für euch ist schmutziges, dummes und anzügliches Gerede; vielmehr sollt ihr Gott danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser5%2C4-7" target="_blank">Epheser 5:4 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Jakobus 4:11-12</a></div>
+						<div class="text">Ärgert euch nicht übereinander, liebe Brüder, sonst wird Gott euch richten. Denn der Richter steht schon vor der Tür!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Jakobus5%2C9" target="_blank">Jakobus 5:9 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Epheser 5:18-19</a></div>
+						<div class="text">Betrinkt euch nicht mit Wein; sonst ruiniert ihr damit euer Leben. Lasst euch stattdessen vom Heiligen Geist erfüllen. Singt miteinander Psalmen und Lobgesänge und geistliche Lieder, und in euren Herzen wird Musik sein zum Lob Gottes.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser5%2C18-19" target="_blank">Epheser 5:18-19 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Lukas 3:11</a></div>
+						<div class="text">(..) Wer zwei Hemden hat, soll dem eins geben, der keines hat. Und wer etwas zu essen hat, soll es mit jemand teilen, der hungert.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas3%2C11" target="_blank">Lukas 3:11 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Kolosser 1:10</a></div>
+						<div class="text">Dann werdet ihr mit eurem Leben den Herrn ehren und ihn erfreuen mit allem, was ihr tut. Auf diese Weise werdet ihr Gott immer besser kennenlernen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Kolosser1%2C10" target="_blank">Kolosser 1:10 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Epheser 4:25</a></div>
+						<div class="text">Belügt einander also nicht länger, sondern sagt die Wahrheit. Wir sind doch als Christen die Glieder eines Leibes, der Gemeinde von Jesus.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser4%2C25" target="_blank">Epheser 4:25 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Kolosser 3:8-11</a></div>
+						<div class="text">Aber jetzt ist es Zeit, das alles abzulegen. Lasst euch nicht mehr zum Zorn und zu Wutausbrüchen hinreißen. Schluss mit aller Bosheit! Redet nicht schlecht übereinander und beleidigt niemanden!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C8" target="_blank">Kolosser 3:8 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">1.Korinther 6:7</a></div>
+						<div class="text">Schlimm genug, dass ihr euch überhaupt auf einen Rechtsstreit einlasst! Weshalb ertragt ihr es nicht lieber, wenn man euch Unrecht tut, und warum nehmt ihr nicht eher Nachteile in Kauf, anstatt auf euer Recht zu pochen?</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther6%2C7" target="_blank">1.Korinther 6:7 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">3.Mose 19:33-34</a></div>
+						<div class="text">Wenn sich ein Ausländer bei euch niederlässt, sollt ihr ihn nicht ausbeuten. Den Ausländer, der bei euch wohnt, sollt ihr wie einen von euch behandeln und ihr sollt ihn lieben wie euch selbst. Denn ihr selbst wart einst Fremde in Ägypten. Ich bin der HERR, euer Gott.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/3.Mose19%2C33-34" target="_blank">3.Mose 19:33-34 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Philipper 4:8-9</a></div>
+						<div class="text">Kein Christ darf gehässig über andere reden oder gar Streit suchen. Er soll vielmehr jedem freundlich und liebevoll begegnen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Titus3%2C2" target="_blank">Titus 3:2 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Titus 3:2</a></div>
+						<div class="text">Schließlich, meine lieben Brüder und Schwestern, orientiert euch an dem, was wahrhaftig, vorbildlich und gerecht, was redlich und liebenswert ist und einen guten Ruf hat. Beschäftigt euch mit den Dingen, die auch bei euren Mitmenschen als Tugend gelten und Lob verdienen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper4%2C8" target="_blank">Philipper 4:8 (HFA)</a></div>
 					</div>
-					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
