--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,6 @@
         <link rel="stylesheet" type="text/css" href="styles.css" />
 
     </head>
-    <body onload="getVerseToday(versliste, randomMapping)">
+    <body onload="getVerseToday(versliste, randomMapping, document.body)">
     </body>
 </html>
