--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -418,18 +418,40 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
+						<div class="text">Denn mein Haus soll für alle Völker ein Ort des Gebets sein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja56%2C7" target="_blank">Jesaja 56,7 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text">Denn wo zwei oder drei in meinem Namen zusammenkommen, bin ich in ihrer Mitte.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us18%2C20" target="_blank">Matthäus 18,20 (HFA)</a></div>
+					</div>
+					-->
+					<div class="moreinfo">
+						<div class="text">Wisst ihr nicht, dass ihr als Gemeinde der Tempel Gottes seid und dass der Geist Gottes in euch wohnt?</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Korinther3%2C16" target="_blank">1.Korinther 3,16 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Ich will, dass ihr barmherzig seid; eure Opfer will ich nicht. Mir geht es darum, dass ihr meinen Willen erkennt, und nicht darum, dass ihr mir Brandopfer bringt.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hosea6%2C6" target="_blank">Hosea 6,6 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Lasst euch selbst als lebendige Steine zu einem geistigen Haus erbauen, zu einer Priesterschaft, die Gott geweiht ist und die ihm, vermittelt durch Jesus Christus, Opfer darbringt, Opfer geistiger Art, an denen er Gefallen hat, nämlich den Opferdienst des ganzen Lebens.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Petrus2%2C5" target="_blank">1 Petrus 2,5 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Der Herr hat gesagt: »Dieses Volk da behauptet, mich zu ehren. Aber sie ehren mich nur mit Worten, mit dem Herzen sind sie weit weg von mir. Ihr ganzer Gottesdienst ist sinnlos, denn er besteht nur in der Befolgung von Vorschriften, die Menschen sich ausgedacht haben.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja29%2C13" target="_blank">Jesaja 29,13 (GNB)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Der HERR sagt: »Ich hasse eure Feste und kann eure Feiern nicht ausstehen. Eure Brandopfer und Speiseopfer sind mir zuwider; das gemästete Vieh, das ihr für das Opfermahl schlachtet, kann ich nicht mehr sehen. Hört auf mit dem Geplärr eurer Lieder! Euer Harfengeklimper ist mir lästig! Sorgt lieber dafür, dass jeder zu seinem Recht kommt! Recht und Gerechtigkeit sollen das Land erfüllen wie ein Strom, der nie austrocknet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Amos5%2C21-24" target="_blank">Amos 5,21-24 (GNB)</a></div>
 					</div>
-					<!--
+					<div class="moreinfo">
+						<div class="text">Ich sage dir: Du bist Petrus. Auf diesen Felsen werde ich meine Gemeinde bauen, und selbst die Macht des Todes wird sie nicht besiegen können.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us16%2C18" target="_blank">Matthäus 16,18 (HFA)</a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text">Ihr fastet zwar, aber gleichzeitig zankt und streitet ihr und schlagt mit roher Faust zu. Wenn das ein Fasten sein soll, dann höre ich eure Gebete nicht! Denkt ihr, mir einen Gefallen zu tun, wenn ihr bloß auf Essen und Trinken verzichtet, den Kopf hängen lasst und euch in Trauergewändern in die Asche setzt? Nennt ihr so etwas ›Fasten‹? Ist das ein Tag, an dem ich, der HERR, Freude habe? Nein – ein Fasten, das mir gefällt, sieht anders aus: Löst die Fesseln der Menschen, die man zu Unrecht gefangen hält, befreit sie vom drückenden Joch der Sklaverei und gebt ihnen ihre Freiheit wieder! Schafft jede Art von Unterdrückung ab! Teilt euer Brot mit den Hungrigen, nehmt Obdachlose bei euch auf, und wenn ihr einem begegnet, der in Lumpen herumläuft, gebt ihm Kleider! Helft, wo ihr könnt, und verschließt eure Augen nicht vor den Nöten eurer Mitmenschen!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C4-7" target="_blank">Jesaja 58,3-7 (HFA)</a></div>
