weitere Bibelstelle zum Thema Regierung/Gehorsam Johannes19,10-11

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -489,6 +489,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm75%2C8" target="_blank">Psalm 75,8 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Redest du nicht mehr mit mir?, fragte Pilatus. Ist dir nicht klar, dass es in meiner Macht steht, dich freizugeben oder dich ans Kreuz nageln zu lassen? Jetzt antwortete Jesus: Du hättest keine Macht über mich, wenn sie dir nicht von oben gegeben wäre. (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes19%2C10-11" target="_blank">Johannes 19,10-11 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Obwohl er Gottes Sohn war, hat er an dem, was er durchmachen musste, gelernt, was Gehorsam bedeutet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er5%2C8" target="_blank">Hebräer 5,8 (NeÜ)</a></div>
 					</div>
