--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -465,6 +465,10 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
+						<div class="text">(...) habt Ehrfurcht vor Gott und ehrt auch den König!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/1.Petrus2%2C17" target="_blank">1.Petrus 2,17 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) Der höchste Gott ist Herr über alle Königreiche der Welt, er vertraut die Herrschaft an, wem er will.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Daniel4%2C29" target="_blank">Daniel 4,29 (HFA)</a></div>
 					</div>
@@ -492,11 +496,11 @@
 						<div class="text">Redest du nicht mehr mit mir?, fragte Pilatus. Ist dir nicht klar, dass es in meiner Macht steht, dich freizugeben oder dich ans Kreuz nageln zu lassen? Jetzt antwortete Jesus: Du hättest keine Macht über mich, wenn sie dir nicht von oben gegeben wäre. (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes19%2C10-11" target="_blank">Johannes 19,10-11 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Obwohl er Gottes Sohn war, hat er an dem, was er durchmachen musste, gelernt, was Gehorsam bedeutet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er5%2C8" target="_blank">Hebräer 5,8 (NeÜ)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
 						<div class="text">Er muss Menschen nicht erst lange verhören und sie zu sich laden vor Gericht – nein, ohne Verhandlung stürzt er die Mächtigen und setzt andere an ihrer Stelle ein.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hiob34%2C23-24" target="_blank">Hiob 34,23-24 (HFA)</a></div>
