Bibelstellen u den beiden Themen "Jesus ist Gott" und "Jesus ist Mensch"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -763,6 +763,68 @@
 					-->
 				</div>
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Jesus ist Gott</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Im Anfang war das Wort, und das Wort war bei Gott, und das Wort war Gott.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/ELB/Johannes1%2C1" target="_blank">Johannes 1,1 (ELB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Gott ist durch Christus selbst in diese Welt gekommen und hat Frieden mit ihr geschlossen (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/2.Korinther5%2C19" target="_blank">2.Korinther 5,19 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Er ist das Bild des unsichtbaren Gottes, der erstgeborene Sohn des Vaters, aller Schöpfung voraus und ihr weit überlegen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Kolosser1%2C15" target="_blank">Kolosser 1,15 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn Gott hat beschlossen, mit seiner ganzen Fülle in ihm zu wohnen</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser1%2C19" target="_blank">Kolosser 1,19 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn in Christus lebt die Fülle Gottes in menschlicher Gestalt</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Kolosser2%2C9" target="_blank">Kolosser 2,9 (NLB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Jesus ist Mensch</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Er, das Wort, wurde ein Mensch, ein wirklicher Mensch von Fleisch und Blut. (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes1%2C14" target="_blank">Johannes 1,14 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Er wurde wie jeder andere Mensch geboren und war in allem ein Mensch wie wir.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper2%2C7" target="_blank">Philipper 2,7 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Den Geist Gottes erkennt ihr daran: Er bekennt, dass Jesus Christus als Mensch aus Fleisch und Blut zu uns gekommen ist.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Johannes4%2C2" target="_blank">1.Johannes 4,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"> In der Welt sind nämlich neuerdings viele Verführer unterwegs. Sie leugnen, dass Jesus Christus ein Mensch von Fleisch und Blut wurde. In ihnen ist der große Verführer, der Antichrist, schon erschienen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Johannes7%2C7" target="_blank">2.Johannes 7,7 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
 			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
