--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -773,6 +773,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/ELB/Johannes1%2C1" target="_blank">Johannes 1,1 (ELB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Der Vater und ich sind untrennbar eins.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes10%2C30" target="_blank">Johannes 10,30 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) Gott ist durch Christus selbst in diese Welt gekommen und hat Frieden mit ihr geschlossen (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/2.Korinther5%2C19" target="_blank">2.Korinther 5,19 (HFA)</a></div>
 					</div>
@@ -814,8 +818,16 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Johannes4%2C2" target="_blank">1.Johannes 4,2 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"> In der Welt sind nämlich neuerdings viele Verführer unterwegs. Sie leugnen, dass Jesus Christus ein Mensch von Fleisch und Blut wurde. In ihnen ist der große Verführer, der Antichrist, schon erschienen.</div>
+						<div class="text">In der Welt sind nämlich neuerdings viele Verführer unterwegs. Sie leugnen, dass Jesus Christus ein Mensch von Fleisch und Blut wurde. In ihnen ist der große Verführer, der Antichrist, schon erschienen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Johannes7%2C7" target="_blank">2.Johannes 7,7 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Und weil er selbst ein Mensch ist mit all seinen Schwächen, kann er die Menschen verstehen, die unwissend sind und Irrwege gehen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er5%2C7" target="_blank">Hebräer 5,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Als Jesus unter uns Menschen lebte, schrie er unter Tränen zu Gott, der ihn allein vom Tod retten konnte. Und Gott erhörte sein Gebet, weil Jesus den Vater ehrte und ihm gehorsam war.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er5%2C7" target="_blank">Hebräer 5,7 (HFA)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
