Bibelstellen: + Titus 3,1; - Johannes 19,10-11

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -485,6 +485,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/R%C3%B6mer13%2C7" target="_blank">Römer 13,7 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Erinnere die Christen daran, dass sie sich den Regierenden und staatlichen Behörden unterzuordnen haben. Sie sollen die Gesetze des Staates befolgen und jederzeit bereit sein, Gutes zu tun.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Titus3%2C1" target="_blank">Titus 3,1 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Ihr sollt Gott nicht lästern und ein Oberhaupt eures Volkes nicht verfluchen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Mose22%2C27" target="_blank">2.Mose 22,27 (GNB)</a></div>
 					</div>
@@ -492,11 +496,11 @@
 						<div class="text">Denn Gott allein ist Richter: Den einen lässt er fallen, den anderen bringt er zu Ansehen und Macht.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm75%2C8" target="_blank">Psalm 75,8 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Redest du nicht mehr mit mir?, fragte Pilatus. Ist dir nicht klar, dass es in meiner Macht steht, dich freizugeben oder dich ans Kreuz nageln zu lassen? Jetzt antwortete Jesus: Du hättest keine Macht über mich, wenn sie dir nicht von oben gegeben wäre. (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes19%2C10-11" target="_blank">Johannes 19,10-11 (HFA)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
 						<div class="text">Obwohl er Gottes Sohn war, hat er an dem, was er durchmachen musste, gelernt, was Gehorsam bedeutet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er5%2C8" target="_blank">Hebräer 5,8 (NeÜ)</a></div>
