neu: Bibelstellen zum Willen Gottes

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -841,7 +841,53 @@
 					-->
 				</div>
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Der Wille Gottes</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Denn er will, dass alle Menschen gerettet werden und seine Wahrheit erkennen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Timotheus2%2C4" target="_blank">1.Timotheus 2,4 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Es wurde dir, Mensch, doch schon längst gesagt, was gut ist und wie Gott möchte, dass du leben sollst. Er fordert von euch nichts anderes, als dass ihr euch an das Recht haltet, liebevoll und barmherzig miteinander umgeht und demütig vor Gott euer Leben führt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Micha6%2C8" target="_blank">Micha 6,8 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Aber er hat Geduld mit euch und will nicht, dass auch nur einer von euch verloren geht. Jeder soll Gelegenheit haben, zu Gott umzukehren.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/2.Petrus3%2C9" target="_blank">2.Petrus 3,9 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn Gott will, dass ihr durch eure guten Taten alle zum Schweigen bringt, die aus Dummheit und Unwissenheit gegen euch reden.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Petrus2%2C15" target="_blank">1.Petrus 2,15 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn mein Vater will, dass jeder, der den Sohn sieht und an ihn glaubt, ewiges Leben hat. Und am letzten Tag werde ich ihn erwecken ‹vom Tod›.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Johannes6%2C40" target="_blank">Johannes 6,40 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gott will, dass ihr heilig seid: dass ihm euer ganzes Leben gehört. Das bedeutet, dass ihr euch von Unzucht fernhalten sollt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Thessalonicher4%2C3" target="_blank">1.Thessalonicher 4,3 (GNB)</a></div>
+					</div>
+				</div>
+				<!-- 
+				https://bible.knowing-jesus.com/Deutsch/topics/Gottes-Wille
+                https://www.erf.de/lesen/themen/glaube/dein-wille-geschehe-was-will-gott/2803-542-1292
+				-->
+			</div>
 			<!--
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Rettung</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+				</div>
+			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
 					<div class="label"></div>
