neu: Geoo ist Liebe + Gott ist ein verzehrendes Feuer

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -356,6 +356,7 @@
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
+					2.Petrus 1,10
 					-->
 				</div>
 			</div>
@@ -876,7 +877,83 @@
                 https://www.erf.de/lesen/themen/glaube/dein-wille-geschehe-was-will-gott/2803-542-1292
 				-->
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gott ist Liebe</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Wer nicht liebt, der kennt Gott nicht; denn Gott ist Liebe.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/LUT/1.Johannes4%2C8" target="_blank">1.Johannes 4,8 (LUT)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wir haben erkannt, wie sehr Gott uns liebt, und wir glauben an seine Liebe. Gott ist Liebe, und wer in der Liebe lebt, der lebt in Gott und Gott lebt in ihm.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Johannes4%2C16" target="_blank">1.Johannes 4,16 (NLB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gott ist ein verzehrendes Feuer</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Auf uns wartet also ein unerschütterliches Reich. Deshalb wollen wir dankbar sein, denn dadurch dienen wir Gott, wie es ihm gefällt: in Ehrfurcht und heiliger Scheu. Denn auch unser Gott ist ein vernichtendes Feuer.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er12%2C28" target="_blank">Hebräer 12,28-29 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Habt keine Angst vor den Menschen, die zwar den Körper, aber nicht die Seele töten können! Fürchtet vielmehr Gott, der beide, Leib und Seele, dem ewigen Verderben in der Hölle ausliefern kann.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us10%2C28" target="_blank">Matthäus 10,28 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Und denkt daran, dass der himmlische Vater, zu dem ihr betet, niemanden bevorzugt, wenn er richtet. Er wird euch nach dem beurteilen, was ihr tut. Deshalb sollt ihr während eurer Zeit als Fremde in dieser Welt in Ehrfurcht vor Gott leben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Petrus1%2C17" target="_blank">1.Petrus 1,17 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Dient dem HERRN mit Furcht, und jauchzt mit Zittern!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/ELB/Psalm2%2C11" target="_blank">Psalm 2,11 (ELB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ich, der Herrscher der Welt, ich allein bin heilig! Vor mir und keinem anderen sollt ihr erschrecken und euch fürchten!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja8%2C13" target="_blank"> Jesaja 11,13 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
 			<!--
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Hoffnung</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<! --
+					Psalm 43,5  --  https://www.bibleserver.com/HFA.ELB.GNB.LUT.Ne%C3%9C.NLB/Psalm43
+					-- >
+				</div>
+			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
 					<div class="label">Rettung</div>
@@ -886,6 +963,10 @@
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
+					<! --
+					Jesaja 30,15  --  https://www.bibleserver.com/HFA.ELB.GNB.LUT.Ne%C3%9C.NLB/Jesaja30%2C15
+					1.Petrus 1,9
+					-- >
 				</div>
 			</div>
 			<div class="btnframe">
