Neu: Hoffnung, Rettung + weitere Bibelstellen zu vorhandenen Themen

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -276,10 +276,6 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us6%2C31-33" target="_blank">Matthäus 6,31-33 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text"> Aber ich weiß, dass mein Erlöser lebt, und als der Letzte wird er über dem Staub sich erheben.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/LUT/Hiob19%2C25" target="_blank">Hiob 19:25 (LUT)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">Seid wachsam und steht fest im Glauben! Seid entschlossen und stark! Bei allem, was ihr tut, lasst euch von der Liebe leiten.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther16%2C13-14" target="_blank">1.Korinther 16:13-14 (HFA)</a></div>
 					</div>
@@ -335,6 +331,10 @@
 						<div class="text">Du glaubst, dass es nur einen einzigen Gott gibt? Schön und gut. Aber das glauben sogar die Dämonen – und zittern vor Angst. Wann endlich wirst du törichter Mensch einsehen, dass der Glaube nichts wert ist, wenn wir nicht auch tun, was Gott von uns will?</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus2%2C19-20" target="_blank">Jakobus 2,19-20 (HFA)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Deshalb, meine Brüder und Schwestern, setzt alles daran, so zu leben, dass eure Berufung und Erwählung gefestigt wird. Dann werdet ihr niemals zu Fall kommen</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Petrus1%2C10" target="_blank">2.Petrus 1,10 (GNB)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text">In Christus Jesus sind wir Gottes Meisterstück. Er hat uns geschaffen, dass wir tun, was wirklich gut ist, gute Werke, die er für uns vorbereitet hat, dass wir damit unser Leben gestalten.</div>
@@ -356,7 +356,6 @@
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
-					2.Petrus 1,10
 					-->
 				</div>
 			</div>
@@ -871,6 +870,12 @@
 						<div class="text">Gott will, dass ihr heilig seid: dass ihm euer ganzes Leben gehört. Das bedeutet, dass ihr euch von Unzucht fernhalten sollt.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Thessalonicher4%2C3" target="_blank">1.Thessalonicher 4,3 (GNB)</a></div>
 					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 				<!-- 
 				https://bible.knowing-jesus.com/Deutsch/topics/Gottes-Wille
@@ -939,19 +944,33 @@
 					-->
 				</div>
 			</div>
-			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
 					<div class="label">Hoffnung</div>
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
+						<div class="text">(...) Hoffen aber bedeutet: noch nicht haben. Denn was einer schon hat und sieht, darauf braucht er nicht mehr zu hoffen. Hoffen wir aber auf etwas, das wir noch nicht sehen können, dann warten wir zuversichtlich darauf, dass es sich erfüllt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer8%2C24-25" target="_blank">Römer 8,24-25 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Warum bin ich so mutlos? Warum so traurig? Auf Gott will ich hoffen, denn eines Tages werde ich ihn wieder loben, meinen Retter und meinen Gott!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm43%2C5" target="_blank">Psalm 43,5 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"> Aber ich weiß, dass mein Erlöser lebt, und als der Letzte wird er über dem Staub sich erheben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/LUT/Hiob19%2C25" target="_blank">Hiob 19:25 (LUT)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
-					<! --
-					Psalm 43,5  --  https://www.bibleserver.com/HFA.ELB.GNB.LUT.Ne%C3%9C.NLB/Psalm43
-					-- >
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 			</div>
 			<div class="btnframe">
@@ -960,15 +979,26 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
+						<div class="text">So spricht der HERR, der heilige Gott Israels: »Kehrt doch um zu mir und werdet ruhig, dann werdet ihr gerettet! Vertraut mir und habt Geduld, dann seid ihr stark! (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja30%2C15" target="_blank">Jesaja 30,15 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Ihr glaubt an ihn, obwohl ihr ihn auch jetzt nicht sehen könnt, und eure Freude ist herrlich, ja, grenzenlos, denn ihr wisst, dass ihr das Ziel eures Glaubens erreichen werdet: die Rettung für alle Ewigkeit.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Petrus1%2C8-9" target="_blank">1.Petrus 1,8-9 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
-					<! --
-					Jesaja 30,15  --  https://www.bibleserver.com/HFA.ELB.GNB.LUT.Ne%C3%9C.NLB/Jesaja30%2C15
-					1.Petrus 1,9
-					-- >
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 			</div>
+			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
 					<div class="label"></div>
@@ -981,9 +1011,7 @@
 				</div>
 			</div>
 			-->
-			<!-- Weissheit -->
-			<!-- Trost -->
-			<!-- Hiob 19:27 -->
+			<!-- Weissheit, Trost -->
 		</div>
 	</body>
 </html>
